--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "cuid": "^1.3.8",
+    "lodash": "^4.16.6",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-redux": "5.0.0-beta.3",
+    "redux": "^3.6.0",
+    "redux-orm": "^0.8.4",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
