--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "5.0.0-beta.3",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^1.0.0",
     "redux-orm": "^0.8.4",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4"
