--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "5.0.0-beta.3",
+    "redbox-react": "^1.3.3",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
     "redux-orm": "^0.8.4",
