--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "redux-devtools-extension": "^1.0.0",
     "redux-orm": "^0.8.4",
     "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4"
+    "reselect": "^2.5.4",
+    "semantic-ui-css": "^2.2.4",
+    "semantic-ui-react": "^0.60.9"
   },
   "scripts": {
     "start": "react-scripts start",
