--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   },
   "dependencies": {
     "cuid": "^1.3.8",
-    "lodash": "^4.16.6",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "5.0.0-beta.3",
-    "react-toggle-display": "^2.1.1",
-    "redbox-react": "^1.3.3",
-    "redux": "^3.6.0",
-    "redux-devtools-extension": "^1.0.0",
+    "lodash": "^4.17.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-toggle-display": "^2.2.0",
+    "redbox-react": "^1.4.3",
+    "redux": "^3.7.1",
+    "redux-devtools-extension": "^2.13.2",
     "redux-orm": "^0.9.4",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4",
-    "semantic-ui-css": "^2.2.4",
-    "semantic-ui-react": "^0.61.1"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.71.0"
   },
   "scripts": {
     "start": "react-scripts start",
