--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-color": "^2.13.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-toggle-display": "^2.2.0",
