--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.6.1",
     "react-color": "^2.13.1",
     "react-dom": "^15.6.1",
+    "react-portal": "^3.1.0",
     "react-redux": "^5.0.5",
     "react-toggle-display": "^2.2.0",
     "redux": "^3.7.1",
